@@ -1,1 +1,1 @@
-Thomas Cokelaer
+Thomas Cokelaer Thomas.Cokelaer@sophia.inria.fr
