@@ -13,13 +13,14 @@ tag_svn_revision = 1
 [global]
 # verbose=0
 
-[nosetests]
-where=test
-with_coverage=
-cover_package=openalea.scheduler
-cover_erase=
 
 [build_sphinx]
 source_dir = doc/
 build_dir  = doc/_build
 all_files  = 1
+
+
+[upload_sphinx]
+package = pylab
+project = openalea
+
